--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="row">
         <div class="twelve column">
           <h4 class="hero-heading">
-	    Imaging Analysis for Bio and Medical Challenges
+	    Imaging Analysis for Biological and Medical Challenges
           </h4>
         </div>
       </div>
