--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/favicon.png">
 
+  <!-- Google
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-76745412-1', 'auto');
+        ga('send', 'pageview');
+  </script>
+
 </head>
 <body>
 
@@ -57,7 +68,7 @@
 
       <div class="row">
         <div class="twelve column">
-          <a href="cfuscope.html"><img class="u-max-full-width" src="images/CFU_icon_sm.png"></a>
+          <a href="cfuscope"><img class="u-max-full-width" src="images/CFU_icon_sm.png"></a>
           <h5 class="value-heading">CFU Scope</h5>
         </div>
       </div>
