--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="row">
         <div class="twelve column">
           <h4 class="hero-heading">
-	    Imaging Analysis for Biological and Medical Challenges
+	    Image Analysis for Biological and Medical Challenges
           </h4>
         </div>
       </div>
