--- a/cfuscope_mobile.html
+++ b/cfuscope_mobile.html
@@ -58,7 +58,7 @@
     <div class="container">
       <div class="row">
         <div class="one-half column">
-          <h5 class="hero-heading">Fast and Preise CFU Counting</h5>
+          <h5 class="hero-heading">Fast and Precise CFU Counting</h5>
           <img class="u-max-full-width" src="images/App_Store_icon.png">
         </div>
         <div class="one-half column phones">
