add app store link

--- a/cfuscope.html
+++ b/cfuscope.html
@@ -76,7 +76,7 @@
       <br>
       <!-- <img class="u-max-full-width" src="images/CFU_icon_sm.png"> -->
       <h2>Fast and Precise CFU Counting</h2> 
-      <img class="u-max-full-width" src="images/App_Store_icon.png">
+      <a href="https://itunes.apple.com/us/app/cfu-scope/id1104871540?ls=1&mt=8"><img class="u-max-full-width" src="images/App_Store_icon.png"></a>
     </div>
   </div>
 
