--- a/cfuscope_mobile.html
+++ b/cfuscope_mobile.html
@@ -59,7 +59,7 @@
       <div class="row">
         <div class="one-half column">
           <h5 class="hero-heading">Fast and Precise CFU Counting</h5>
-          <img class="u-max-full-width" src="images/App_Store_icon.png">
+          <a href="https://itunes.apple.com/us/app/cfu-scope/id1104871540?ls=1&mt=8"><img class="u-max-full-width" src="images/App_Store_icon.png"></a>
         </div>
         <div class="one-half column phones">
           <img class="phone" src="images/lab_ex_2.png">
