--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
           <h5 class="value-heading">CFU Scope</h5>
         </div>
       </div>
+
+      <p>
+      <div class="copyright">&copy; 2016 Medixgraph, Inc. <span class="rights-reserved">All Rights Reserved. </span>| <a href="mailto:info@medixgraph.com">contact Medixgraph</a></div>
+
     </div>
   </div>
 
