--- a/cfuscope.html
+++ b/cfuscope.html
@@ -78,7 +78,7 @@
       <h2>Fast and Precise CFU Counting</h2> 
       <a href="https://itunes.apple.com/us/app/cfu-scope/id1104871540?ls=1&mt=8"><img class="u-max-full-width" src="images/App_Store_icon.png"></a>
       <br>
-      <div class="copyright">&copy; 2016 Medixgraph, Inc. <span class="rights-reserved">All Rights Reserved. </span>| <a href="mailto:info@medixgraph.com">Contact</a> | <a href="http://medixgraph.com">Back</a></div>
+      <div class="copyright">&copy; 2016 Medixgraph, Inc. <span class="rights-reserved">All Rights Reserved. </span>| <a href="mailto:info@medixgraph.com">Contact</a> | <a href="https://www.facebook.com/medixgraph">Facebook</a> | <a href="http://medixgraph.com">Back</a></div>
       <br>
     </div>
   </div>
