--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </div>
 
       <p>
-      <div class="copyright">&copy; 2016 Medixgraph, Inc. <span class="rights-reserved">All Rights Reserved. </span>| <a href="mailto:info@medixgraph.com">Contact</a> | <a href="https://www.facebook.com/medixgraph">Facebook</a> | <a href="privacy.html">Privacy</a>
+      <div class="copyright">&copy; 2016 Medixgraph, Inc. <span class="rights-reserved">All Rights Reserved. </span>| <a href="mailto:info@medixgraph.com">Contact</a> | <a href="https://www.facebook.com/medixgraph">Facebook</a> | <a href="privacy">Privacy</a>
       </div>
 
     </div>
