--- a/ad.html
+++ b/ad.html
@@ -78,7 +78,7 @@
         -->
         <br>
         <div class="one-half column phones">
-          <img class="phone" src="images/lab_ex_2.png">
+          <img class="phone" src="images/cfuscope_ad.png">
         </div>
       </div>
     </div>
