--- a/ad.html
+++ b/ad.html
@@ -5,8 +5,8 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>CFU Scope in-App Ad</title>
-  <meta name="description" content="CFU Scope in-App Ad">
+  <title>CFU Scope in-App Advertisement</title>
+  <meta name="description" content="CFU Scope in-App Advertisement">
   <meta name="author" content="Kai Yang">
 
   <!-- Mobile Specific Metas
@@ -60,7 +60,7 @@
     <div class="container">
       <div class="row">
         <div class="one-half column">
-          <h4 class="hero-heading">CFU Scope in-App Advertisement</h4>
+          <h4 class="hero-heading">in-App Advertisement</h4>
           <h5>
           <ul>
             <li>High Visibility</li>
