--- a/ad.html
+++ b/ad.html
@@ -68,7 +68,7 @@
             <li>Diversified Customers</li>
             <li>Large Coverage</li>
           </ul>
-          <div><a href="mailto:info@medixgraph.com">Contact</a> | <a href="http://medixgraph.com/cfuscope">Back</a></div>
+          <div><a href="mailto:info@medixgraph.com">Contact Us for More Info</a> | <a href="http://medixgraph.com/cfuscope">Back</a></div>
           </h5>
           <!-- <a href="https://itunes.apple.com/us/app/cfu-scope/id1104871540?ls=1&mt=8"><img class="u-max-full-width" src="images/App_Store_icon.png"></a> -->
         </div>
