--- a/grid_cfuscope.html
+++ b/grid_cfuscope.html
@@ -5,8 +5,8 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>CFU Scope - Colony Forming Unit Counter</title>
-  <meta name="description" content="CFU Scope - iOS App">
+  <title>Grid CFU Scope - 3M Petrifilm &trade; Colony Forming Unit Counter</title>
+  <meta name="description" content="Grid CFU Scope - iOS App">
   <meta name="author" content="Kai Yang">
 
   <!-- Mobile Specific Metas
@@ -33,7 +33,7 @@
 
   <script type="text/javascript">
     if (screen.width <= 699) {
-      document.location = "cfuscope_mobile.html";
+      document.location = "grid_cfuscope_mobile.html";
     }
   </script>
 
@@ -75,7 +75,7 @@
       <br>
       <br>
       <!-- <img class="u-max-full-width" src="images/CFU_icon_sm.png"> -->
-      <h2>Fast and Precise CFU Counting</h2> 
+      <h2>Fast and Precise 3M Petrifilm &trade; CFU Counting</h2> 
       <a href="https://itunes.apple.com/us/app/cfu-scope/id1104871540?ls=1&mt=8"><img class="u-max-full-width" src="images/App_Store_icon.png"></a>
       <br>
       <div class="copyright">&copy; 2017 Medixgraph, Inc. <span class="rights-reserved">All Rights Reserved. </span>| <a href="mailto:info@medixgraph.com">Contact</a> | <a href="https://www.facebook.com/medixgraph">Facebook</a> | <a href="http://medixgraph.com">Back</a></div>
