--- a/index.html
+++ b/index.html
@@ -69,12 +69,15 @@
       <div class="row">
         <div class="twelve column">
           <a href="cfuscope"><img class="u-max-full-width" src="images/CFU_icon_sm.png"></a>
+          <a href="grid_cfuscope"><img class="u-max-full-width" src="images/GridCFU_icon_sm.png"></a>
+          <!--
           <h5 class="value-heading">CFU Scope</h5>
+          -->
         </div>
       </div>
 
       <p>
-      <div class="copyright">&copy; 2016 Medixgraph, Inc. <span class="rights-reserved">All Rights Reserved. </span>| <a href="mailto:info@medixgraph.com">Contact</a> | <a href="https://www.facebook.com/medixgraph">Facebook</a> | <a href="privacy">Privacy</a>
+      <div class="copyright">&copy; 2017 Medixgraph, Inc. <span class="rights-reserved">All Rights Reserved. </span>| <a href="mailto:info@medixgraph.com">Contact</a> | <a href="https://www.facebook.com/medixgraph">Facebook</a> | <a href="privacy">Privacy</a>
       </div>
 
     </div>
