--- a/grid_cfuscope_mobile.html
+++ b/grid_cfuscope_mobile.html
@@ -58,7 +58,7 @@
     <div class="container">
       <div class="row">
         <div class="one-half column">
-          <h5 class="hero-heading">Fast & Precise 3M Petrifilm &trade; CFU Counting</h5>
+          <h5 class="hero-heading">Fast & Precise 3M Petrifilm &trade; Counting</h5>
           <a href="https://itunes.apple.com/us/app/cfu-scope/id1104871540?ls=1&mt=8"><img class="u-max-full-width" src="images/App_Store_icon.png"></a>
         </div>
         <div class="copyright">&copy; 2017 Medixgraph, Inc. <span class="rights-reserved">All Rights Reserved. </span></div>
