--- a/grid_cfuscope_mobile.html
+++ b/grid_cfuscope_mobile.html
@@ -64,7 +64,7 @@
         <div class="copyright">&copy; 2017 Medixgraph, Inc. <span class="rights-reserved">All Rights Reserved. </span></div>
         <div class="copyright"><a href="mailto:info@medixgraph.com">Contact</a> | <a href="https://www.facebook.com/medixgraph">Facebook</a> | <a href="http://medixgraph.com">Back</a></div>
         <div class="one-half column phones">
-          <img class="phone" src="images/lab_ex_2.png">
+          <img class="phone" src="images/gridCFU_lab_2.png">
         </div>
       </div>
     </div>
