add 3M images and mobile site

--- a/grid_cfuscope_mobile.html
+++ b/grid_cfuscope_mobile.html
@@ -66,6 +66,19 @@
         <div class="one-half column phones">
           <img class="phone" src="images/gridCFU_lab_2.jpg">
         </div>
+        example ...
+        <div class="one-half column phones">
+          <img class="phone" src="images/3M_AC_doc_1_ex.png">
+        </div>
+        <div class="one-half column phones">
+          <img class="phone" src="images/3M_AC_doc_2_ex.png">
+        </div>
+        <div class="one-half column phones">
+          <img class="phone" src="images/3M_RAC_doc_1_ex.png">
+        </div>
+        <div class="one-half column phones">
+          <img class="phone" src="images/3M_RAC_doc_2_ex.png">
+        </div>
       </div>
     </div>
   </div>
