--- a/grid_cfuscope_mobile.html
+++ b/grid_cfuscope_mobile.html
@@ -61,24 +61,36 @@
           <h5 class="hero-heading">Fast & Precise 3M Petrifilm &trade; Counting</h5>
           <a href="https://itunes.apple.com/us/app/cfu-scope/id1104871540?ls=1&mt=8"><img class="u-max-full-width" src="images/App_Store_icon.png"></a>
         </div>
-        <div class="copyright">&copy; 2017 Medixgraph, Inc. <span class="rights-reserved">All Rights Reserved. </span></div>
-        <div class="copyright"><a href="mailto:info@medixgraph.com">Contact</a> | <a href="https://www.facebook.com/medixgraph">Facebook</a> | <a href="http://medixgraph.com">Back</a></div>
-        <div class="one-half column phones">
+
+        <div class="one-half column">
           <img class="phone" src="images/gridCFU_lab_2.jpg">
         </div>
-        example ...
-        <div class="one-half column phones">
-          <img class="phone" src="images/3M_AC_doc_1_ex.png">
+
+      </div>
+    </div>
+  </div>
+
+  <div class="section hero">
+    <div class="container">
+      <div class="row">
+        <div class="one-half column">
+          <h5 class="hero">Petrifilm &trade; is trademark of 3M</h5>
+          <h5 class="hero">Test examples are from <a href="http://multimedia.3m.com/mws/media/236194O/petrifilm-aerobic-interpretation-guide.pdf">3M documents</a></h5>
         </div>
-        <div class="one-half column phones">
-          <img class="phone" src="images/3M_AC_doc_2_ex.png">
+      </div>
+      <div class="row">
+        <div class="one-half column">
+          <img class="phone" src="images/3M_examples.png">
         </div>
-        <div class="one-half column phones">
-          <img class="phone" src="images/3M_RAC_doc_1_ex.png">
-        </div>
-        <div class="one-half column phones">
-          <img class="phone" src="images/3M_RAC_doc_2_ex.png">
-        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="section hero">
+    <div class="container">
+      <div class="row">
+        <div class="copyright">&copy; 2017 Medixgraph, Inc. <span class="rights-reserved">All Rights Reserved. </span></div>
+        <div class="copyright"><a href="mailto:info@medixgraph.com">Contact</a> | <a href="https://www.facebook.com/medixgraph">Facebook</a> | <a href="http://medixgraph.com">Back</a></div>
       </div>
     </div>
   </div>
