--- a/grid_cfuscope_mobile.html
+++ b/grid_cfuscope_mobile.html
@@ -76,7 +76,7 @@
     <div class="container">
       <div class="row">
         <div class="one-half column">
-          <h5 class="hero">Petrifilm &trade; is trademark of 3M</h5>
+          <h5 class="hero">Petrifilm &trade; is a trademark of 3M</h5>
           <h5 class="hero">Test examples are from <a href="http://multimedia.3m.com/mws/media/236194O/petrifilm-aerobic-interpretation-guide.pdf">3M documents</a></h5>
         </div>
       </div>
