--- a/grid_cfuscope.html
+++ b/grid_cfuscope.html
@@ -62,7 +62,7 @@
       <!--
       <a href="https://itunes.apple.com/us/app/cfu-scope/id1104871540?ls=1&mt=8"><img class="u-max-full-width" src="images/App_Store_icon.png"></a>
       -->
-      <h5>Petrifilm &trade; is trademark of 3M</h5>
+      <h5>Petrifilm &trade; is a trademark of 3M</h5>
       <h5>Test examples are from <a href="http://multimedia.3m.com/mws/media/236194O/petrifilm-aerobic-interpretation-guide.pdf">3M documents</a></h5>
       <img class="u-max-full-width" src="images/3M_examples.png">
       <div class="copyright">&copy; 2017 Medixgraph, Inc. <span class="rights-reserved">All Rights Reserved. </span>| <a href="mailto:info@medixgraph.com">Contact</a> | <a href="https://www.facebook.com/medixgraph">Facebook</a> | <a href="http://medixgraph.com">Back</a></div>
