--- a/test_amazon.html
+++ b/test_amazon.html
@@ -45,12 +45,15 @@ amzn_assoc_default_search_phrase = "acne treatment";
 amzn_assoc_default_category = "All";
 amzn_assoc_linkid = "62cd125a847da06efb1344e6d77c6ace";
 </script>
-<script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
 
 </head>
 <body>
 
+<div style="border-width:3px;border-style:dashed;border-color:#FFAC55;padding:5px;">
 AA
+<script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
+</div>
+
 
 </body>
 </html>
