--- a/test_amazon.html
+++ b/test_amazon.html
@@ -49,11 +49,9 @@ amzn_assoc_linkid = "62cd125a847da06efb1344e6d77c6ace";
 </head>
 <body>
 
-<div style="border-width:3px;border-style:dashed;border-color:#FFAC55;padding:5px;">
-AA
-<script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
+<div style="border-width:6px;border-style:solid;border-color:#6099ba;padding:10px;">
+  <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
 </div>
-
 
 </body>
 </html>
