--- a/test_amazon.html
+++ b/test_amazon.html
@@ -40,7 +40,7 @@ amzn_assoc_ad_mode = "search";
 amzn_assoc_ad_type = "smart";
 amzn_assoc_marketplace = "amazon";
 amzn_assoc_region = "US";
-amzn_assoc_title = "Shop Related Products";
+amzn_assoc_title = "ClearFace Recommendation";
 amzn_assoc_default_search_phrase = "acne treatment";
 amzn_assoc_default_category = "All";
 amzn_assoc_linkid = "62cd125a847da06efb1344e6d77c6ace";
@@ -49,7 +49,7 @@ amzn_assoc_linkid = "62cd125a847da06efb1344e6d77c6ace";
 </head>
 <body>
 
-<div style="border-width:6px;border-style:solid;border-color:#6099ba;padding:10px;">
+<div style="border-width:8px;border-style:solid;border-color:#6099ba;padding:10px;">
   <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
 </div>
 
