--- a/test_amazon.html
+++ b/test_amazon.html
@@ -41,7 +41,7 @@ amzn_assoc_ad_type = "smart";
 amzn_assoc_marketplace = "amazon";
 amzn_assoc_region = "US";
 amzn_assoc_title = "ClearFace Recommendation";
-amzn_assoc_default_search_phrase = "acne treatment";
+amzn_assoc_default_search_phrase = "acne treatment cream";
 amzn_assoc_default_category = "All";
 amzn_assoc_linkid = "62cd125a847da06efb1344e6d77c6ace";
 </script>
