--- a/test_amazon.html
+++ b/test_amazon.html
@@ -32,6 +32,10 @@
   <link rel="icon" type="image/png" href="images/favicon.png">
 
 <script type="text/javascript">
+
+var key_words_1 = ["treatment", "cream", "prevention"];
+var search_words = "acne" + " " + key_words_1[2]
+
 amzn_assoc_placement = "adunit0";
 amzn_assoc_search_bar = "true";
 amzn_assoc_tracking_id = "medixgraph-20";
@@ -41,9 +45,11 @@ amzn_assoc_ad_type = "smart";
 amzn_assoc_marketplace = "amazon";
 amzn_assoc_region = "US";
 amzn_assoc_title = "ClearFace Recommendation";
-amzn_assoc_default_search_phrase = "acne treatment cream";
+//amzn_assoc_default_search_phrase = "acne treatment cream";
+amzn_assoc_default_search_phrase = search_words;
 amzn_assoc_default_category = "All";
 amzn_assoc_linkid = "62cd125a847da06efb1344e6d77c6ace";
+
 </script>
 
 </head>
