--- a/test_amazon.html
+++ b/test_amazon.html
@@ -34,7 +34,8 @@
 <script type="text/javascript">
 
 var key_words_1 = ["treatment", "cream", "prevention"];
-var search_words = "acne" + " " + key_words_1[2]
+var r = Math.floor(Math.random() * key_words_1.length);
+var search_words = "acne" + " " + key_words_1[r];
 
 amzn_assoc_placement = "adunit0";
 amzn_assoc_search_bar = "true";
