--- a/test_amazon.html
+++ b/test_amazon.html
@@ -31,27 +31,38 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/favicon.png">
 
-<script type="text/javascript">
+  <!-- Google
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
-var key_words_1 = ["treatment", "cream", "prevention"];
-var r = Math.floor(Math.random() * key_words_1.length);
-var search_words = "acne" + " " + key_words_1[r];
+  <!-- Amazon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <script type="text/javascript">
 
-amzn_assoc_placement = "adunit0";
-amzn_assoc_search_bar = "true";
-amzn_assoc_tracking_id = "medixgraph-20";
-amzn_assoc_search_bar_position = "bottom";
-amzn_assoc_ad_mode = "search";
-amzn_assoc_ad_type = "smart";
-amzn_assoc_marketplace = "amazon";
-amzn_assoc_region = "US";
-amzn_assoc_title = "ClearFace Recommendation";
-//amzn_assoc_default_search_phrase = "acne treatment cream";
-amzn_assoc_default_search_phrase = search_words;
-amzn_assoc_default_category = "All";
-amzn_assoc_linkid = "62cd125a847da06efb1344e6d77c6ace";
+    var kw_1 = ["treatment", "cream", "wash", "prevention", "care", "control", "scrub", "cleaning"];
+    var r_1 = Math.floor(Math.random() * kw_1.length);
 
-</script>
+    var kw_2 = ["face", "daily", "deep", ""];
+    var r_2 = Math.floor(Math.random() * kw_2.length);
+
+    var kw_3 = ["organic", "oil-free", ""];
+    var r_3 = Math.floor(Math.random() * kw_3.length);
+
+    var search_words = "acne" + " " + kw_1[r_1] + " " + kw_2[r_2] + " " + kw_3[r_3];
+
+    amzn_assoc_placement = "adunit0";
+    amzn_assoc_search_bar = "true";
+    amzn_assoc_tracking_id = "medixgraph-20";
+    amzn_assoc_search_bar_position = "bottom";
+    amzn_assoc_ad_mode = "search";
+    amzn_assoc_ad_type = "smart";
+    amzn_assoc_marketplace = "amazon";
+    amzn_assoc_region = "US";
+    amzn_assoc_title = "ClearFace Recommendation";
+    amzn_assoc_default_search_phrase = search_words;
+    amzn_assoc_default_category = "All";
+    amzn_assoc_linkid = "62cd125a847da06efb1344e6d77c6ace";
+
+  </script>
 
 </head>
 <body>
