add parameter parsing

--- a/test_amazon.html
+++ b/test_amazon.html
@@ -41,7 +41,7 @@
     var url = window.location.href;
     var captured = /info=([^&]+)/.exec(url)[1];
     var info = captured ? captured : '';
-    console.log(info);
+    //console.log(info);
 
     var kw_1 = ["treatment", "cream", "wash", "prevention", "care", "control", "scrub", "cleaning"];
     var r_1 = Math.floor(Math.random() * kw_1.length);
