change file name

--- a/clearface_amazon_ad.html
+++ b/clearface_amazon_ad.html
@@ -38,10 +38,16 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <script type="text/javascript">
 
+    // ex: http://medixgraph.com/clearface_amazon_ad?info=%00
+    // ex: http://medixgraph.com/clearface_amazon_ad?info=female+mild
+
     var url = window.location.href;
-    var captured = /info=([^&]+)/.exec(url)[1];
-    var info = captured ? captured : '';
-    //console.log(info);
+    var info = "";
+    if url.includes("info") {
+      var captured = /info=([^&]+)/.exec(url)[1];
+      info = captured ? captured : '';
+    }
+    console.log(info);
 
     var kw_1 = ["treatment", "cream", "wash", "prevention", "care", "control", "scrub", "cleaning"];
     var r_1 = Math.floor(Math.random() * kw_1.length);
