--- a/clearface_amazon_ad.html
+++ b/clearface_amazon_ad.html
@@ -43,7 +43,7 @@
 
     var url = window.location.href;
     var info = "";
-    if url.includes("info") {
+    if (url.includes("info")) {
       var captured = /info=([^&]+)/.exec(url)[1];
       info = captured ? captured : '';
     }
