change html header meta data

--- a/clearface_amazon_ad.html
+++ b/clearface_amazon_ad.html
@@ -5,9 +5,9 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>CFU Scope in-App Advertisement</title>
-  <meta name="description" content="CFU Scope in-App Advertisement">
-  <meta name="author" content="Kai Yang">
+  <title>Suggested Products by ClearFace App</title>
+  <meta name="description" content="Suggested Products by ClearFace App">
+  <meta name="author" content="clearface.ai">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
