--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="twelve column">
           <a href="cfuscope"><img class="u-max-full-width" src="images/CFU_icon_sm.png"></a>
           <a href="grid_cfuscope"><img class="u-max-full-width" src="images/GridCFU_icon_sm.png"></a>
-          <a href="grid_cfuscope"><img class="u-max-full-width" src="images/clearface_icon_sm.png"></a>
+          <a href="http://clearface.ai"><img class="u-max-full-width" src="images/clearface_icon_sm.png"></a>
           <!--
           <h5 class="value-heading">CFU Scope</h5>
           -->
