add cfu.ai link

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
           <a href="cfuscope"><img class="u-max-full-width" src="images/CFU_icon_sm.png"></a>
           <a href="grid_cfuscope"><img class="u-max-full-width" src="images/GridCFU_icon_sm.png"></a>
           <a href="http://clearface.ai"><img class="u-max-full-width" src="images/clearface_icon_sm.png"></a>
+          <a href="http://cfu.ai"><img class="u-max-full-width" src="images/cfuai_icon_sm.png"></a>
           <!--
           <h5 class="value-heading">CFU Scope</h5>
           -->
